# discord-downloader

./: Dockerfile  LICENSE  README.md  app.py  compose.yaml  config.json  config.py  pyproject.toml  requirements.txt  tenor_handler.py  test_download.py
imgdownloader/: app.py
imgdownloader/templates/: index.html
routes/: debug_routes.py  download_routes.py  main_routes.py
services/: download_service.py  file_service.py  generic_file_service.py  tenor_service.py
static/css/: style.css  styles.css  tailwind.css
static/js/: debug.js  index.js  logs.js  main.js  tailwind-config.js
templates/: debug.html  footer.html  header.html  index.html  layout.html  logs.html
utils/: logging_utils.py
